crates/dsql-core/tests/it/snapshots/it__policies__compiled_filters_execute_across_supported_sources.snap
---
source: crates/dsql-core/tests/it/policies.rs
expression: "format!(\"manual:\\n{manual}\\n\\ndefault:\\n{default}\\n\\nopt out:\\n{opt_out}\\n\\naggregate:\\n{aggregate}\\n\\nexists:\\n{exists}\\n\\nunrelated:\\n{unrelated}\\n\\nfield:\\n{field}\")"
---
manual:


default:


opt out:


aggregate:


exists:


unrelated:


field:
