crates/dsql-core/tests/it/snapshots/it__policies__embedded_filter_definitions_are_rejected.snap
---
source: crates/dsql-core/tests/it/policies.rs
expression: render_diagnostic_facts(&bowl).await
---
Error[0..41]: embedded dsql expression defines no top-level definition; exactly one is required
Error[7..14]: filter definitions must live in standalone dsql files
