crates/dsql-core/tests/it/snapshots/it__policies__filter_visibility_follows_resolution_scope_imports.snap
---
source: crates/dsql-core/tests/it/policies.rs
expression: "format!(\"imported:\\n{}\\n\\nisolated:\\n{}\\n\\nambiguous:\\n{}\",\nrender_diagnostic_facts(&imported).await,\nrender_diagnostic_facts(&isolated).await,\nrender_diagnostic_facts(&ambiguous).await,)"
---
imported:
Error[6..7]: filter `Visible` affects this operation but cannot be enforced until filter semantics are applied to generated SQL

isolated:
Error[23..30]: filter `Visible` not found

ambiguous:
Error[23..30]: filter `Visible` is ambiguous
Error[7..14]: filter `Visible` is provided to scope `frontend` by scopes `left`, `right`
