crates/dsql-core/tests/it/snapshots/it__policies__filters_and_conditions_resolve_concrete_and_structural_targets.snap
---
source: crates/dsql-core/tests/it/policies.rs
expression: "render_index(&bowl, &catalog).await"
---
condition Enabled [] default=false enforced=false
condition SameRow [public::aka_name, public::aka_title, public::cast_info, public::char_name, public::comp_cast_type, public::company_name, public::company_type, public::complete_cast, public::info_type, public::keyword, public::kind_type, public::link_type, public::movie_companies, public::movie_info, public::movie_info_idx, public::movie_keyword, public::movie_link, public::name, public::person_info, public::role_type, public::title] default=false enforced=false
filter Correlated [public::title] default=false enforced=false
filter IntegerRows [public::aka_name, public::aka_title, public::cast_info, public::char_name, public::comp_cast_type, public::company_name, public::company_type, public::complete_cast, public::info_type, public::keyword, public::kind_type, public::link_type, public::movie_companies, public::movie_info, public::movie_info_idx, public::movie_keyword, public::movie_link, public::name, public::person_info, public::role_type, public::title] default=false enforced=false
filter Titles [public::title] default=true enforced=false
