crates/dsql-core/tests/it/snapshots/it__policies__native_enum_policy_literals_follow_the_catalog_contract.snap
---
source: crates/dsql-core/tests/it/policies.rs
expression: render_diagnostic_facts(&bowl).await
---
Error[192..201]: expected a variant of `public.status`; allowed values are "pending", "active", "archived"
