crates/dsql-core/tests/it/snapshots/it__policies__provider_policy_context_conflicts_are_order_independent.snap
---
source: crates/dsql-core/tests/it/policies.rs
assertion_line: 362
expression: "format!(\"date then inet:\\n{date_then_inet}\\n\\ninet then date:\\n{inet_then_date}\\n\\nmatching:\\n{matching}\")"
---
date then inet:
Error[71..79]: trusted context `context.shared` is required as both `pg_catalog.date` and `pg_catalog.inet`

inet then date:
Error[71..79]: trusted context `context.shared` is required as both `pg_catalog.inet` and `pg_catalog.date`

matching:
