crates/dsql-core/tests/it/snapshots/it__policies__provider_policy_context_mismatches_are_order_independent.snap
---
source: crates/dsql-core/tests/it/policies.rs
expression: "format!(\"date then inet:\\n{date_then_inet}\\n\\ninet then date:\\n{inet_then_date}\\n\\nmatching:\\n{matching}\")"
---
date then inet:
Error[108..116]: trusted context `context.shared` is declared as `pg_catalog::date` but this use requires `pg_catalog::inet`

inet then date:
Error[80..88]: trusted context `context.shared` is declared as `pg_catalog::date` but this use requires `pg_catalog::inet`

matching:
